fixed flex bug on mobile tilt screen and tablet

--- a/src/util/styles/css/intro.css
+++ b/src/util/styles/css/intro.css
@@ -5,6 +5,8 @@
 }
 .event-list {
     display: flex;
+      justify-content:center;
+    align-items:center;
     position: relative;
     text-align: center;
     padding-top: 120px;
